Worked on request leave form where user can pick date range, type of leave and enter some description/comment about leave.Had problem with default CSRF on post request, had to disable it. Added columnt isApproved to leave model so admin can approve or not approve the leave that user requested. Added pending endpoint to return all leaves that are not approved so admin can evaluate request. Started working on evaluate font-end view where user can evaluate leave requests and approve or reject them.Added evaluate button to leave calendar so user can redirect to evaluate view.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -210,13 +210,15 @@ play.cache {
 # There are a number of built-in filters that can be enabled and configured
 # to give Play greater security.
 #
+
+
 play.filters {
 
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
 
   # Disabled filters remove elements from the enabled list.
-  #disabled += filters.ExampleFilters
+  disabled += play.filters.csrf.CSRFFilter
 
   ## CORS filter configuration
   # https://www.playframework.com/documentation/latest/CorsFilter
@@ -367,8 +369,6 @@ jwt {
   algorithm = "HS256",
   schema = "bearer"
 }
-
-roles = ["Employee", "Admin", "Owner", "Contractor"]
 
 # API prefix to be used for all API routes
 apiPrefix = "api"
